Fixed content jumping.

--- a/src/public/sass/input.scss
+++ b/src/public/sass/input.scss
@@ -1,14 +1,3 @@
-// .slideshow-container {
-//   position: relative;
-//   max-width: 50%;
-//   margin: 0 auto;
-//   background: lightpink;
-// }
-
-// .month-heading {
-//   text-align: center;
-//   background: lightgreen;
-// }
 
 
 
@@ -106,9 +95,11 @@
 // }
 
 $gunmetalGray: #2A3439;
+$imagePadding: 130%;
 
 body {
   margin: 0;
+  font-family: 'Playfair Display', serif;
 }
 
 .flex-container {
@@ -129,7 +120,8 @@ body {
 }
 
 .header {
-  background: lightcoral;
+  background: #f1f1f1;
+  padding: 20px;
 }
 
 .header h1 {
@@ -200,11 +192,13 @@ body {
   order: 3;
 }
 
-.wrapper {
-}
-
 .review-text {
   margin: 10px 10px;
+}
+
+.image-container {
+  max-width: 779px;
+  margin: 0 auto;
 }
 
 .image-wrapper {
@@ -212,16 +206,18 @@ body {
   text-align: center;
   border: 1px solid $gunmetalGray;
   margin: 0 auto;
-  max-width: 780px;
-  // padding-top: 132%;
-  // height: 0;
-  // position: relative;
+  max-width: 760px;
+  padding: 0 0 130%;
+  position: relative;
 }
 
 .image-container img {
-  // position: absolute;
-  // top: 0;
-  // left: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   max-width: 100%;
-  height: auto; 
+  max-height: 100%; 
+  margin: 0 auto;
 }
